# insurance-notice-maker

./: .gitignore  main.py  pyproject.toml  template.docx
templates/: form.html  index.html
